# life

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
include/: game.h  grid.h  object.h  text.h  texture.h
src/: game.cpp  grid.cpp  main.cpp  object.cpp  text.cpp  texture.cpp
